--- a/HaRepacker/GUI/NewForm.resx
+++ b/HaRepacker/GUI/NewForm.resx
@@ -119,14 +119,14 @@
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="nameBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>112, 18</value>
+    <value>112, 19</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="nameBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
   </data>
   <data name="nameBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>150, 26</value>
+    <value>150, 29</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="nameBox.TabIndex" type="System.Int32, mscorlib">
@@ -148,13 +148,13 @@
     <value>True</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>18, 21</value>
+    <value>18, 22</value>
   </data>
   <data name="label1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>51, 20</value>
+    <value>52, 21</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -178,13 +178,13 @@
     <value>True</value>
   </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>267, 23</value>
+    <value>267, 24</value>
   </data>
   <data name="label2.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>32, 20</value>
+    <value>32, 21</value>
   </data>
   <data name="label2.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -208,13 +208,13 @@
     <value>True</value>
   </data>
   <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>18, 60</value>
+    <value>18, 63</value>
   </data>
   <data name="label3.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
   </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>43, 20</value>
+    <value>42, 21</value>
   </data>
   <data name="label3.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -238,13 +238,13 @@
     <value>True</value>
   </data>
   <data name="regBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>114, 58</value>
+    <value>114, 61</value>
   </data>
   <data name="regBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
   </data>
   <data name="regBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>90, 24</value>
+    <value>89, 25</value>
   </data>
   <data name="regBox.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -268,13 +268,13 @@
     <value>True</value>
   </data>
   <data name="listBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>212, 58</value>
+    <value>212, 61</value>
   </data>
   <data name="listBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
   </data>
   <data name="listBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>59, 24</value>
+    <value>59, 25</value>
   </data>
   <data name="listBox.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -295,13 +295,13 @@
     <value>9</value>
   </data>
   <data name="copyrightBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>112, 94</value>
+    <value>112, 99</value>
   </data>
   <data name="copyrightBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
   </data>
   <data name="copyrightBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>306, 26</value>
+    <value>306, 29</value>
   </data>
   <data name="copyrightBox.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
@@ -325,13 +325,13 @@
     <value>True</value>
   </data>
   <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>18, 97</value>
+    <value>18, 102</value>
   </data>
   <data name="label4.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 20</value>
+    <value>79, 21</value>
   </data>
   <data name="label4.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
@@ -352,13 +352,13 @@
     <value>7</value>
   </data>
   <data name="okButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 229</value>
+    <value>0, 240</value>
   </data>
   <data name="okButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
   </data>
   <data name="okButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>220, 58</value>
+    <value>220, 61</value>
   </data>
   <data name="okButton.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
@@ -382,13 +382,13 @@
     <value>NoControl</value>
   </data>
   <data name="cancelButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>230, 229</value>
+    <value>230, 240</value>
   </data>
   <data name="cancelButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
   </data>
   <data name="cancelButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>208, 58</value>
+    <value>208, 61</value>
   </data>
   <data name="cancelButton.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -412,13 +412,13 @@
     <value>True</value>
   </data>
   <data name="label5.Location" type="System.Drawing.Point, System.Drawing">
-    <value>18, 138</value>
+    <value>18, 145</value>
   </data>
   <data name="label5.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
   </data>
   <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>84, 20</value>
+    <value>84, 21</value>
   </data>
   <data name="label5.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
@@ -442,13 +442,13 @@
     <value>True</value>
   </data>
   <data name="label6.Location" type="System.Drawing.Point, System.Drawing">
-    <value>18, 181</value>
+    <value>18, 190</value>
   </data>
   <data name="label6.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
   </data>
   <data name="label6.Size" type="System.Drawing.Size, System.Drawing">
-    <value>63, 20</value>
+    <value>62, 21</value>
   </data>
   <data name="label6.TabIndex" type="System.Int32, mscorlib">
     <value>11</value>
@@ -469,13 +469,13 @@
     <value>3</value>
   </data>
   <data name="encryptionBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>112, 134</value>
+    <value>112, 141</value>
   </data>
   <data name="encryptionBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
   </data>
   <data name="encryptionBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>306, 28</value>
+    <value>306, 29</value>
   </data>
   <data name="encryptionBox.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
@@ -493,13 +493,13 @@
     <value>2</value>
   </data>
   <data name="versionBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>112, 175</value>
+    <value>112, 184</value>
   </data>
   <data name="versionBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
   </data>
   <data name="versionBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>74, 26</value>
+    <value>74, 29</value>
   </data>
   <data name="versionBox.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
@@ -526,13 +526,13 @@
     <value>NoControl</value>
   </data>
   <data name="radioButton_hotfix.Location" type="System.Drawing.Point, System.Drawing">
-    <value>282, 58</value>
+    <value>282, 61</value>
   </data>
   <data name="radioButton_hotfix.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
   </data>
   <data name="radioButton_hotfix.Size" type="System.Drawing.Size, System.Drawing">
-    <value>137, 24</value>
+    <value>134, 25</value>
   </data>
   <data name="radioButton_hotfix.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
@@ -556,10 +556,13 @@
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>9, 20</value>
+    <value>9, 21</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>438, 288</value>
+    <value>438, 302</value>
+  </data>
+  <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 8pt</value>
   </data>
   <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 5, 4, 5</value>
